@@ -95,9 +95,9 @@ html: demo $(TARGET_DOX_HTML) fix_png
 
 # Make the background color of the png's transparent.
 fix_png:
-	cd $(USER_MANUAL); \
+	cd $(USER_MANUAL) 2>/dev/null || exit 0; \
 	for png in *.png; do \
-		echo "Fixing tranparency for $$png"; \
+		echo "Fixing transparency for $$png"; \
 		$(PNGTOPNM) $$png > tmp.pnm; \
 		$(PNMTOPNG) -transparent white tmp.pnm > $$png && rm tmp.pnm; \
 	done
